button fixes, nav bar fixes to fix weird horizontal scrolling

--- a/letterstocrushes.UI/Content/mobile.css
+++ b/letterstocrushes.UI/Content/mobile.css
@@ -3,7 +3,7 @@
 }
 
 /* styles for desktop */
-    .tinynav { display: block; width: 100px; float: right; margin-right: 30px }
+    .tinynav { display: block; width: 100px; float: right; }
 #nav
 {
     display: none;
